# AILL

./: .gitignore  LICENSE  README.md
docs/: aill_test_and_simulation_output.txt
reference/: README.md
reference-rust/: Cargo.toml
reference-rust/src/: ast.rs  decoder.rs  encoder.rs  error.rs  lib.rs  wasm.rs
reference-rust/src/audio/: constants.rs  decode.rs  encode.rs  live.rs  mod.rs  wav.rs
reference-rust/src/codebook/: base.rs  comm.rs  diag.rs  manip.rs  mod.rs  nav.rs  percept.rs  plan.rs  safety.rs
reference-rust/src/wire/: byte_reader.rs  byte_writer.rs  crc8.rs  float16.rs  mod.rs  varint.rs
reference-rust/tests/: audio_roundtrip.rs  conformance.rs
reference/aill/: __init__.py  channel.py  codebook.py  decoder.py  encoder.py
reference/examples/: simulation.py
reference/tests/: test_conformance.py
spec/: AILL_Codebook_Reference_v1.1.docx  AILL_Specification_v1.0.docx  AILL_Supplement_v1.1.docx
web/: demo.html  simulation.jsx
web/pkg/: aill.d.ts  aill.js  aill_bg.wasm  aill_bg.wasm.d.ts  package.json
