[package]
name = "aill"
version = "1.1.0"
edition = "2021"
description = "AILL (Acoustic Inter-agent Linguistic Link) protocol reference implementation"
license = "MIT"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]

[dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only deps
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
