[package]
name = "aill"
version = "1.1.0"
edition = "2021"
description = "AILL (Acoustic Inter-agent Linguistic Link) protocol reference implementation"
license = "MIT"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
audio-core = ["dep:rustfft"]
audio = ["audio-core", "dep:hound"]
audio-live = ["audio", "dep:cpal"]
wasm-audio = ["wasm", "audio-core"]

[dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only deps
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# Audio deps
hound = { version = "3.5", optional = true }
rustfft = { version = "6.2", optional = true }
cpal = { version = "0.15", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aill-live"
path = "src/bin/aill-live.rs"
required-features = ["audio-live"]
